# expense-tracker

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.codex/: agentic-workflow.md  context-map.md
.codex/checklists/: publication-gate.md
.codex/specs/: 2026-05-08-import-data-plan.md  2026-05-08-import-data.md  2026-05-16-drawing-hyperlink-sanitize.md  2026-05-28-multiselect-filters.md  2026-06-01-description-in-movements.md  feature-spec-template.md  implementation-plan-template.md
.codex/subagents/: README.md  analytics-worker.md  frontend-worker.md  publication-auditor.md  tauri-api-worker.md  verifier-reviewer.md  workbook-worker.md
.github/workflows/: ci.yml  release.yml
openspec/: config.yaml
scripts/: gen-icon.mjs  update.key.pub
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  rules.rs  state.rs
src-tauri/src/excel/: dates.rs  mod.rs  sanitize.rs  workbook.rs
src-tauri/src/imports/: kutxabank.rs  mod.rs
src-tauri/tests/: rules_integration.rs  workbook_integration.rs
src/components/: FiltersBar.test.tsx  FiltersBar.tsx  MovementForm.test.tsx  MovementForm.tsx  MovementsByCategory.tsx  MovementsTable.test.tsx  MovementsTable.tsx  SettingsDialog.tsx  Sidebar.tsx  ThemeProvider.tsx  Topbar.tsx
src/lib/: api.test.ts  api.ts  i18n.tsx  navigationGuard.ts  types.ts  utils.test.ts  utils.ts
src/pages/: Analytics.tsx  Categories.tsx  Dashboard.tsx  ImportData.test.tsx  ImportData.tsx  ImportRules.tsx  Movements.test.tsx  Movements.tsx  Onboarding.tsx  load-error.test.tsx
src/store/: workbook.ts
src/themes/: bosque.css  (+5 more)
(+27 files in other folders)
