[package]
name = "expense-tracker"
version = "1.4.9"
description = "Desktop expense tracker with Excel workbook persistence"
authors = ["Alejandro Fuerte"]
license = "MIT"
repository = "https://github.com/AlexFJ498/expense-tracker"
homepage = "https://github.com/AlexFJ498/expense-tracker"
edition = "2021"

[lib]
name = "expense_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.34"
umya-spreadsheet = "2.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
directories = "6"
uuid = { version = "1", features = ["v4"] }
zip = "2"
regex = "1"
tempfile = "3"
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
tempfile = "3"
